# actix_postgres_api

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.sqlx/: query-169d5303d250d689298fdde222acff133698e030cb66a5f8b0c16adf76a7eb1b.json  query-52422e85e3a9015cca2c7d39d1d69a1ce0dc782825b7290786065529c0c86acc.json  query-5aa04169557393c150fcdffd2f90f1b507dfcaf0c9d0a017955cf0275e5d215b.json  query-b6062d802eeaf29de1fa62bc45b1779914a22d6eda6fbf8f3defa49ef630c632.json  query-bd08d41f72708b85be433cd4723ba7bfa98c7e9bb1c729453673c47df9000b8d.json  query-d200208eb0d02cfa9d8569f17f076504774df77aed6762b6c7c5eed87220bd65.json
src/: auth.rs  handlers.rs  main.rs
src/views/: create_user.html  login.html  register.html
