[package]
name = "actix_postgres_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.28.0", features = ["full"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
argon2 = "0.5.3"
rand = "0.8.5"
futures = "0.3.31"